update unit test and add spring boot to run